    where unit types like length or speed are mapped to their base units in
    MDAnalysis (i.e. "A" or "A/ps") (PR # 3749)
  * A new AuxReader for the GROMACS EDR file format was implemented.
    (Issue # 3629, PR # 3749)
  * Added benchmarks for bonds topology attribute (Issue #3785, PR #3806)
  * Added isolayer selection method (Issue #3845)

Changes
 * Replaced deprecated Bio.pairwise2 with Bio.align.PairwiseAligner in
   MDAnalysis.analysis.align.sequence_alignment (Issue #3950)
 * Increased minimal version of biopython to 1.80 (Issue #3950)
 * Moved `libmdanalysis` cython header to `lib`(Issue #3912, PR #3913)
 * Auxiliary; determination of representative frames: The default value for
   cutoff is now None, not -1. Negative values are now turned
   to None. (PR #3749)
 * `MDAnalysis.coordinates.base.add_auxiliary()` now supports adding of
    multiple auxiliary data points at the same time. To this end, the API was
    rewritten and now expects dictionaries of `desired attribute name`:
    `name in auxiliary data file` as input. Adding all data found in the
    auxiliary data source is possible by omitting the dictionary and explicitly
    passing the AuxReader instance as `auxdata`. (PR #3749)
  * The "AMBER" entry in setup.py's extra_requires has now been removed. Please
    use `pip install ./package[extra_formats]` instead (PR #3810)
  * `Universe.empty` emmits less warnings (PR #3814)
  * adding element attribute to TXYZParser if all atom names are valid element symbols (PR #3826)

Deprecations
  * Deprecated analysis.align.sequence_alignment() for removal in 3.0 (#3950)
  * Add deprecation warning for `timestep` copying in DCDReader
    (Issue #3889, PR #3888)
  * Add deprecation warning for inclusive stop indexing in
    MemoryReader.timeseries (PR #3894)


08/29/22 IAlibay, PicoCentauri, orbeckst, hmacdope, rmeli, miss77jun, rzhao271,
         yuxuanzhuang, hsadia538, lilyminium

 * 2.3.0

Fixes