@@ -33,10 +33,10 @@ jobs:
       fail-fast: false
       matrix:
         buildplat:
-          - [ubuntu-18.04, manylinux_x86_64]
-          - [macos-10.15, macosx_*]
+          - [ubuntu-20.04, manylinux_x86_64]
+          - [macos-11, macosx_*]
           - [windows-2019, win_amd64]
-        python: ["cp38", "cp39", "cp310"]
+        python: ["cp38", "cp39", "cp310", "cp311"]
     defaults:
       run:
         working-directory: ./package
@@ -46,7 +46,7 @@ jobs:
           fetch-depth: 0
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.6.0
+        uses: pypa/cibuildwheel@v2.11.2
         with:
           package-dir: package
         env:
@@ -189,9 +189,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         type: ["FULL", "MIN"]
         exclude:
+          # Py311 doesn't support all optional deps yet
+          - python-version: "3.11"
+            type: "FULL"
           # Multiple deps don't like windows
           - os: windows-latest
             python-version: "3.8"
