@@ -28,11 +28,17 @@ jobs:
         fail-fast: false
         matrix:
           os: [ubuntu-latest, ]
-          python-version: [3.8, 3.9, "3.10"]
+          python-version: ["3.8", "3.9", "3.10"]
           full-deps: [true, ]
           install_hole: [true, ]
           codecov: [true, ]
           include:
+            - name: py311-ubuntu-min
+              os: ubuntu-latest
+              python-version: "3.11"
+              full-deps: false
+              install_hole: true
+              codecov: false
             - name: macOS_monterey_py39
               os: macOS-12
               python-version: 3.9
