@@ -36,11 +36,11 @@ jobs:
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'normal'
           imageName: 'windows-2019'
-        Win-Python39-64bit-full-wheel:
-          PYTHON_VERSION: '3.9'
+        Win-Python310-64bit-full-wheel:
+          PYTHON_VERSION: '3.10'
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'wheel'
-          NUMPY_MIN: '1.20.0'
+          NUMPY_MIN: '1.22.3'
           imageName: 'windows-2019'
         Win-Python38-64bit-full-wheel:
           PYTHON_VERSION: '3.8'
@@ -48,11 +48,11 @@ jobs:
           BUILD_TYPE: 'wheel'
           NUMPY_MIN: '1.20.0'
           imageName: 'windows-2019'
-        Linux-Python39-64bit-full-wheel:
-          PYTHON_VERSION: '3.9'
+        Linux-Python310-64bit-full-wheel:
+          PYTHON_VERSION: '3.10'
           PYTHON_ARCH: 'x64'
           BUILD_TYPE: 'wheel'
-          NUMPY_MIN: '1.20.0'
+          NUMPY_MIN: '1.21.6'
           imageName: 'ubuntu-latest'
         Linux-Python38-64bit-full-wheel:
           PYTHON_VERSION: '3.8'
@@ -74,7 +74,7 @@ jobs:
   # "manually"
   - powershell: |
       cd package
-      python -m pip install .
+      python -m pip -v install .
       cd ..
     displayName: 'Build MDAnalysis (wheel)'
     condition: and(succeeded(), eq(variables['BUILD_TYPE'], 'wheel'))
@@ -104,7 +104,6 @@ jobs:
       python -m pip install numpy==$(NUMPY_MIN)
     displayName: 'pin to older NumPy (wheel test)'
     condition: and(succeeded(), eq(variables['BUILD_TYPE'], 'wheel'))
-  # TODO: recent rdkit is not on PyPI
   - script: >-
       python -m pip install
       biopython
@@ -117,6 +116,7 @@ jobs:
       networkx
       parmed
       tidynamics>=1.0.0
+      rdkit>=2020.03.1
     displayName: 'Install additional dependencies for 64-bit tests'
     condition: and(succeeded(), eq(variables['PYTHON_ARCH'], 'x64'))
   - powershell: |
